--- a/suyigou_shop_web/pom.xml
+++ b/suyigou_shop_web/pom.xml
@@ -107,6 +107,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.suyigou</groupId>
+            <artifactId>suyigou_commons</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
             <version>2.8.4</version>
