day08-before 完成所有基本常见功能，后期主要是根据特殊的需求增加新功能 ----------------------------------------------------------- day07-after 完成所有功能 1.商家商品编辑 2.运营商商品审核 3.注解式事务

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <module>suyigou_sellergoods_service</module>
         <module>suyigou_manager_web</module>
         <module>suyigou_shop_web</module>
+        <module>suyigou_content_interface</module>
+        <module>suyigou_content_service</module>
     </modules>
 
     <!-- 集中定义依赖版本号 -->
