--- a/suyigou_manager_web/pom.xml
+++ b/suyigou_manager_web/pom.xml
@@ -121,5 +121,10 @@
             <artifactId>suyigou_commons</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.suyigou</groupId>
+            <artifactId>suyigou_content_interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
