--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
             <dependency>
                 <groupId>javassist</groupId>
                 <artifactId>javassist</artifactId>
-                <version>3.11.0.GA</version>
+                <version>3.22.0-GA</version>
             </dependency>
             <dependency>
                 <groupId>commons-codec</groupId>
