--- a/suyigou_search_service/pom.xml
+++ b/suyigou_search_service/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>suyigou_search_interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.suyigou</groupId>
+            <artifactId>suyigou_commons</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
