--- a/suyigou_sellergoods_service/pom.xml
+++ b/suyigou_sellergoods_service/pom.xml
@@ -93,6 +93,11 @@
             <artifactId>suyigou_sellergoods_interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.suyigou</groupId>
+            <artifactId>suyigou_commons</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
