国庆节休假第一天 将第七天遗漏的东西补齐了 1.运营商审核商品 2.运营商删除商品 3.商品服务的事务管理 ================== day11.mid 1.价格筛选 2.分页 3.多关键字查询 4.排序 5.隐藏品牌列表 6.收藏页与首页对接 todo: 1.更新索引库 ====================== day10.after 1.搜索商品规格 2.搜索商品品牌 3.搜索商品类别 4.规格、品牌、类别联动 ======================== day09.after 1.使用solr建立索引库； 2.搜索功能

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>suyigou_search_interface</module>
         <module>suyigou_search_service</module>
         <module>suyigou_search_web</module>
+        <module>suyigou_page_service</module>
     </modules>
 
     <!-- 集中定义依赖版本号 -->
