--- a/suyigou_manager_web/pom.xml
+++ b/suyigou_manager_web/pom.xml
@@ -127,14 +127,8 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.suyigou</groupId>
-            <artifactId>suyigou_search_interface</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.suyigou</groupId>
-            <artifactId>suyigou_page_interface</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-client</artifactId>
         </dependency>
     </dependencies>
 </project>
