--- a/suyigou_page_interface/pom.xml
+++ b/suyigou_page_interface/pom.xml
@@ -7,6 +7,13 @@
     <groupId>com.suyigou</groupId>
     <artifactId>suyigou_page_interface</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>com.suyigou</groupId>
+            <artifactId>suyigou_pojo</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
     <packaging>jar</packaging>
 
 
