--- a/suyigou_page_service/pom.xml
+++ b/suyigou_page_service/pom.xml
@@ -45,7 +45,8 @@
             <artifactId>spring-test</artifactId>
         </dependency>
         <!-- dubbo相关 -->
-        <dependency>
+        <!--使用activemq中间件后，去除dubbo依赖-->
+        <!--<dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
         </dependency>
@@ -56,7 +57,7 @@
         <dependency>
             <groupId>com.github.sgroschupf</groupId>
             <artifactId>zkclient</artifactId>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -78,7 +79,10 @@
             <artifactId>servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-client</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.suyigou</groupId>
             <artifactId>suyigou_page_interface</artifactId>
