day17: 1.完成购物车的展示； 2.订单提交 ================================ day16: 完成购物车功能 1.仿效京东购物车解决方案； 2.如果没有登录，在cookie中保存和查询购物车数据； 3.如果已经登录，在redis缓存中保存和查询购物车数据； 4.对redis和cookie的数据进行合并。 ==================================== day15 使用cas完成用户单点登录操作 ==================================== day14 使用springcloud和阿里大于完成用户注册 ======================= day13 使用activemq技术解决耦合问题： manager-web和page-service使用点对点模式 manager-web和search-service使用订阅者模式 ===================================== day12 freeMaker生成静态页面 ====================================== 国庆节休假第一天 将第七天遗漏的东西补齐了 1.运营商审核商品 2.运营商删除商品 3.商品服务的事务管理 ================== day11.mid 1.价格筛选 2.分页 3.多关键字查询 4.排序 5.隐藏品牌列表 6.收藏页与首页对接 todo: 1.更新索引库 ====================== day10.after 1.搜索商品规格 2.搜索商品品牌 3.搜索商品类别 4.规格、品牌、类别联动 ======================== day09.after 1.使用solr建立索引库； 2.搜索功能

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <module>suyigou_page_web</module>
         <module>suyigou_user_service</module>
         <module>suyigou_user_web</module>
+        <module>suyigou_order_interface</module>
+        <module>suyigou_order_service</module>
     </modules>
 
     <!-- 集中定义依赖版本号 -->
