--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,17 @@
         <module>suyigou_search_interface</module>
         <module>suyigou_search_service</module>
         <module>suyigou_search_web</module>
+        <module>suyigou_page_interface</module>
         <module>suyigou_page_service</module>
         <module>suyigou_page_web</module>
+        <module>suyigou_user_interface</module>
         <module>suyigou_user_service</module>
         <module>suyigou_user_web</module>
         <module>suyigou_order_interface</module>
         <module>suyigou_order_service</module>
+        <module>suyigou_cart_interface</module>
+        <module>suyigou_cart_service</module>
+        <module>suyigou_cart_web</module>
     </modules>
 
     <!-- 集中定义依赖版本号 -->
