--- a/suyigou_commons/pom.xml
+++ b/suyigou_commons/pom.xml
@@ -28,6 +28,10 @@
             <artifactId>jedis</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
